# syc

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  gitlab-ci.yml
.github/workflows/: check_compile.yml  run_tests.yml  test.yml  test_functional.yml  test_hidden_functional.yml
flattened/: backend__basic_block.cpp  backend__basic_block.h  backend__builder.cpp  backend__builder.h  backend__context.cpp  backend__context.h  backend__function.cpp  backend__function.h  backend__global.cpp  backend__immediate.cpp  backend__immediate.h  backend__instruction.cpp  backend__instruction.h  backend__operand.cpp  backend__operand.h  backend__register.cpp  backend__register.h  common.h  frontend__ast.cpp  frontend__ast.h  frontend__ast_display.cpp  frontend__comptime.cpp  frontend__comptime.h  frontend__driver.cpp  frontend__driver.h  frontend__generated__lexer.cpp  frontend__generated__lexer.h  frontend__generated__location.h  frontend__generated__parser.cpp  frontend__generated__parser.h  frontend__irgen.cpp  frontend__irgen.h  frontend__symtable.cpp  frontend__symtable.h  frontend__type.cpp  frontend__type.h  ir__basic_block.cpp  ir__basic_block.h  ir__builder.cpp  ir__builder.h  (+112 more)
scripts/: benchmark.sh  compile.py  execute.py  flatten.py  run.py  submit.sh  test_flattened.py  yacc_gen.sh
src/: common.h  main.cpp  utils.cpp  utils.h
src/backend/: basic_block.cpp  basic_block.h  builder.cpp  builder.h  codegen.cpp  codegen.h  context.cpp  context.h  function.cpp  function.h  global.cpp  global.h  immediate.cpp  immediate.h  instruction.cpp  (+5 more)
(+134 files in other folders)
